tests/dataset/tpc-ds/compiler/go/q49.go
//go:build ignore

// Generated by Mochi compiler v0.10.26 on 2025-07-16T01:05:41Z

package main

import (
	"encoding/json"
	"fmt"
	"reflect"
	"sort"
	"strings"
	"time"
)

type Catalog struct {
	Item           string  `json:"item"`
	Return_ratio   float64 `json:"return_ratio"`
	Currency_ratio float64 `json:"currency_ratio"`
	Return_rank    int     `json:"return_rank"`
	Currency_rank  int     `json:"currency_rank"`
}

type Store struct {
	Item           string  `json:"item"`
	Return_ratio   float64 `json:"return_ratio"`
	Currency_ratio float64 `json:"currency_ratio"`
	Return_rank    int     `json:"return_rank"`
	Currency_rank  int     `json:"currency_rank"`
}

type Web struct {
	Item           string  `json:"item"`
	Return_ratio   float64 `json:"return_ratio"`
	Currency_ratio float64 `json:"currency_ratio"`
	Return_rank    int     `json:"return_rank"`
	Currency_rank  int     `json:"currency_rank"`
}

type v map[string]any

func expect(cond bool) {
	if !cond {
		panic("expect failed")
	}
}

func formatDuration(d time.Duration) string {
	switch {
	case d < time.Microsecond:
		return fmt.Sprintf("%dns", d.Nanoseconds())
	case d < time.Millisecond:
		return fmt.Sprintf("%.1fµs", float64(d.Microseconds()))
	case d < time.Second:
		return fmt.Sprintf("%.1fms", float64(d.Milliseconds()))
	default:
		return fmt.Sprintf("%.2fs", d.Seconds())
	}
}

func printTestStart(name string) {
	fmt.Printf("   test %-30s ...", name)
}

func printTestPass(d time.Duration) {
	fmt.Printf(" ok (%s)\n", formatDuration(d))
}

func printTestFail(err error, d time.Duration) {
	fmt.Printf(" fail %v (%s)\n", err, formatDuration(d))
}

func test_TPCDS_Q49_simplified() {
	expect(_equal(result, []v{
		v{
			Channel:       "catalog",
			Item:          "A",
			Return_ratio:  0.3,
			Return_rank:   1,
			Currency_rank: 1,
		},
		v{
			Channel:       "store",
			Item:          "A",
			Return_ratio:  0.25,
			Return_rank:   1,
			Currency_rank: 1,
		},
		v{
			Channel:       "web",
			Item:          "A",
			Return_ratio:  0.2,
			Return_rank:   1,
			Currency_rank: 1,
		},
		v{
			Channel:       "web",
			Item:          "B",
			Return_ratio:  0.5,
			Return_rank:   2,
			Currency_rank: 2,
		},
	}))
}

var web []Web
var catalog []Catalog
var store []Store
var tmp []any
var result []any

func main() {
	web = []Web{Web{
		Item:           "A",
		Return_ratio:   0.2,
		Currency_ratio: 0.3,
		Return_rank:    1,
		Currency_rank:  1,
	}, Web{
		Item:           "B",
		Return_ratio:   0.5,
		Currency_ratio: 0.6,
		Return_rank:    2,
		Currency_rank:  2,
	}}
	catalog = []Catalog{Catalog{
		Item:           "A",
		Return_ratio:   0.3,
		Currency_ratio: 0.4,
		Return_rank:    1,
		Currency_rank:  1,
	}}
	store = []Store{Store{
		Item:           "A",
		Return_ratio:   0.25,
		Currency_ratio: 0.35,
		Return_rank:    1,
		Currency_rank:  1,
	}}
	tmp = (append(append(func() []any {
		results := []any{}
		for _, w := range web {
			if (w.Return_rank <= 10) || (w.Currency_rank <= 10) {
				if (w.Return_rank <= 10) || (w.Currency_rank <= 10) {
					results = append(results, v{
						Channel:       "web",
						Item:          w.Item,
						Return_ratio:  w.Return_ratio,
						Return_rank:   w.Return_rank,
						Currency_rank: w.Currency_rank,
					})
				}
			}
		}
		return results
	}(), func() []v {
		results := []v{}
		for _, c := range catalog {
			if (c.Return_rank <= 10) || (c.Currency_rank <= 10) {
				if (c.Return_rank <= 10) || (c.Currency_rank <= 10) {
					results = append(results, v{
						Channel:       "catalog",
						Item:          c.Item,
						Return_ratio:  c.Return_ratio,
						Return_rank:   c.Return_rank,
						Currency_rank: c.Currency_rank,
					})
				}
			}
		}
		return results
	}()...), func() []v {
		results := []v{}
		for _, s := range store {
			if (s.Return_rank <= 10) || (s.Currency_rank <= 10) {
				if (s.Return_rank <= 10) || (s.Currency_rank <= 10) {
					results = append(results, v{
						Channel:       "store",
						Item:          s.Item,
						Return_ratio:  s.Return_ratio,
						Return_rank:   s.Return_rank,
						Currency_rank: s.Currency_rank,
					})
				}
			}
		}
		return results
	}()...))
	result = func() []any {
		src := tmp
		resAny := _query(src, []_joinSpec{}, _queryOpts{selectFn: func(_a ...any) any { r := _a[0]; _ = r; return r }, sortKey: func(_a ...any) any {
			r := _a[0]
			_ = r
			return []any{
				_getField(r, "channel"),
				_getField(r, "return_rank"),
				_getField(r, "currency_rank"),
				_getField(r, "item"),
			}
		}, skip: -1, take: -1})
		out := make([]any, len(resAny))
		for i, v := range resAny {
			out[i] = v
		}
		return out
	}()
	func() { b, _ := json.Marshal(result); fmt.Println(string(b)) }()
	test_TPCDS_Q49_simplified()
}

func _convertMapAny(m map[any]any) map[string]any {
	out := make(map[string]any, len(m))
	for k, v := range m {
		key := fmt.Sprint(k)
		if sub, ok := v.(map[any]any); ok {
			out[key] = _convertMapAny(sub)
		} else {
			out[key] = v
		}
	}
	return out
}

func _equal(a, b any) bool {
	av := reflect.ValueOf(a)
	bv := reflect.ValueOf(b)
	if av.Kind() == reflect.Slice && bv.Kind() == reflect.Slice {
		if av.Len() != bv.Len() {
			return false
		}
		for i := 0; i < av.Len(); i++ {
			if !_equal(av.Index(i).Interface(), bv.Index(i).Interface()) {
				return false
			}
		}
		return true
	}
	if av.Kind() == reflect.Map && bv.Kind() == reflect.Map {
		if av.Len() != bv.Len() {
			return false
		}
		for _, k := range av.MapKeys() {
			bvVal := bv.MapIndex(k)
			if !bvVal.IsValid() {
				return false
			}
			if !_equal(av.MapIndex(k).Interface(), bvVal.Interface()) {
				return false
			}
		}
		return true
	}
	if (av.Kind() == reflect.Int || av.Kind() == reflect.Int64 || av.Kind() == reflect.Float64) &&
		(bv.Kind() == reflect.Int || bv.Kind() == reflect.Int64 || bv.Kind() == reflect.Float64) {
		return av.Convert(reflect.TypeOf(float64(0))).Float() == bv.Convert(reflect.TypeOf(float64(0))).Float()
	}
	return reflect.DeepEqual(a, b)
}

func _getField(v any, name string) any {
	switch m := v.(type) {
	case map[string]any:
		return m[name]
	case map[string]string:
		if s, ok := m[name]; ok {
			return s
		}
	case map[any]any:
		return _convertMapAny(m)[name]
	default:
		rv := reflect.ValueOf(m)
		if rv.Kind() == reflect.Struct {
			rt := rv.Type()
			for i := 0; i < rv.NumField(); i++ {
				fn := rt.Field(i)
				field := fn.Name
				if tag := fn.Tag.Get("json"); tag != "" {
					if c := strings.Index(tag, ","); c >= 0 {
						tag = tag[:c]
					}
					if tag != "-" {
						field = tag
					}
				}
				if field == name {
					return rv.Field(i).Interface()
				}
			}
		}
	}
	return nil
}

type _joinSpec struct {
	items    []any
	on       func(...any) bool
	leftKey  func(...any) any
	rightKey func(any) any
	left     bool
	right    bool
}
type _queryOpts struct {
	selectFn func(...any) any
	where    func(...any) bool
	sortKey  func(...any) any
	skip     int
	take     int
}

func _query(src []any, joins []_joinSpec, opts _queryOpts) []any {
	items := make([][]any, len(src))
	for i, v := range src {
		items[i] = []any{v}
	}
	for _, j := range joins {
		if j.leftKey != nil && j.rightKey != nil {
			if j.right && !j.left {
				lmap := map[string][]int{}
				for li, l := range items {
					key := fmt.Sprint(j.leftKey(l...))
					lmap[key] = append(lmap[key], li)
				}
				joined := [][]any{}
				for _, right := range j.items {
					key := fmt.Sprint(j.rightKey(right))
					if is, ok := lmap[key]; ok {
						for _, li := range is {
							left := items[li]
							keep := true
							if j.on != nil {
								args := append(append([]any(nil), left...), right)
								keep = j.on(args...)
							}
							if !keep {
								continue
							}
							joined = append(joined, append(append([]any(nil), left...), right))
						}
					} else {
						undef := make([]any, len(items[0]))
						joined = append(joined, append(undef, right))
					}
				}
				items = joined
				continue
			}
			rmap := map[string][]int{}
			for ri, r := range j.items {
				key := fmt.Sprint(j.rightKey(r))
				rmap[key] = append(rmap[key], ri)
			}
			joined := [][]any{}
			matched := make([]bool, len(j.items))
			for _, left := range items {
				key := fmt.Sprint(j.leftKey(left...))
				if is, ok := rmap[key]; ok {
					m := false
					for _, ri := range is {
						right := j.items[ri]
						keep := true
						if j.on != nil {
							args := append(append([]any(nil), left...), right)
							keep = j.on(args...)
						}
						if !keep {
							continue
						}
						m = true
						matched[ri] = true
						joined = append(joined, append(append([]any(nil), left...), right))
					}
					if j.left && !m {
						joined = append(joined, append(append([]any(nil), left...), nil))
					}
				} else if j.left {
					joined = append(joined, append(append([]any(nil), left...), nil))
				}
			}
			if j.right {
				lw := 0
				if len(items) > 0 {
					lw = len(items[0])
				}
				for ri, right := range j.items {
					if !matched[ri] {
						undef := make([]any, lw)
						joined = append(joined, append(undef, right))
					}
				}
			}
			items = joined
			continue
		}
		joined := [][]any{}
		if j.right && j.left {
			matched := make([]bool, len(j.items))
			for _, left := range items {
				m := false
				for ri, right := range j.items {
					keep := true
					if j.on != nil {
						args := append(append([]any(nil), left...), right)
						keep = j.on(args...)
					}
					if !keep {
						continue
					}
					m = true
					matched[ri] = true
					joined = append(joined, append(append([]any(nil), left...), right))
				}
				if !m {
					joined = append(joined, append(append([]any(nil), left...), nil))
				}
			}
			for ri, right := range j.items {
				if !matched[ri] {
					undef := make([]any, len(items[0]))
					joined = append(joined, append(undef, right))
				}
			}
		} else if j.right {
			for _, right := range j.items {
				m := false
				for _, left := range items {
					keep := true
					if j.on != nil {
						args := append(append([]any(nil), left...), right)
						keep = j.on(args...)
					}
					if !keep {
						continue
					}
					m = true
					joined = append(joined, append(append([]any(nil), left...), right))
				}
				if !m {
					undef := make([]any, len(items[0]))
					joined = append(joined, append(undef, right))
				}
			}
		} else {
			for _, left := range items {
				m := false
				for _, right := range j.items {
					keep := true
					if j.on != nil {
						args := append(append([]any(nil), left...), right)
						keep = j.on(args...)
					}
					if !keep {
						continue
					}
					m = true
					joined = append(joined, append(append([]any(nil), left...), right))
				}
				if j.left && !m {
					joined = append(joined, append(append([]any(nil), left...), nil))
				}
			}
		}
		items = joined
	}
	if opts.where != nil {
		filtered := [][]any{}
		for _, r := range items {
			if opts.where(r...) {
				filtered = append(filtered, r)
			}
		}
		items = filtered
	}
	if opts.sortKey != nil {
		type pair struct {
			item []any
			key  any
		}
		pairs := make([]pair, len(items))
		for i, it := range items {
			pairs[i] = pair{it, opts.sortKey(it...)}
		}
		sort.Slice(pairs, func(i, j int) bool {
			a, b := pairs[i].key, pairs[j].key
			switch av := a.(type) {
			case int:
				switch bv := b.(type) {
				case int:
					return av < bv
				case float64:
					return float64(av) < bv
				}
			case float64:
				switch bv := b.(type) {
				case int:
					return av < float64(bv)
				case float64:
					return av < bv
				}
			case string:
				bs, _ := b.(string)
				return av < bs
			}
			return fmt.Sprint(a) < fmt.Sprint(b)
		})
		for i, p := range pairs {
			items[i] = p.item
		}
	}
	if opts.skip >= 0 {
		if opts.skip < len(items) {
			items = items[opts.skip:]
		} else {
			items = [][]any{}
		}
	}
	if opts.take >= 0 {
		if opts.take < len(items) {
			items = items[:opts.take]
		}
	}
	res := make([]any, len(items))
	for i, r := range items {
		res[i] = opts.selectFn(r...)
	}
	return res
}
